objects/EXPRN__Business_Score__c.object
<CustomObject>
    <description>Stores scores of business record for different scoring models</description>
    <fields>
        <fullName>EXPRN__Bin__c</fullName>
        <formula>EXPRN__Exp_Business__r.EXPRN__BIN__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bin</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Exp_Business__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Experian Business</label>
        <referenceTo>EXPRN__Experian_Business__c</referenceTo>
        <relationshipLabel>Business Score</relationshipLabel>
        <relationshipName>Business_Score</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EXPRN__Model_Code__c</fullName>
        <label>Model Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Model_Score__c</fullName>
        <label>Model Score</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Model_Type_Code__c</fullName>
        <label>Model Type Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__SCORE_FAC_Desc1__c</fullName>
        <label>SCORE FAC Desc1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EXPRN__SCORE_FAC_Desc2__c</fullName>
        <label>SCORE FAC Desc2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EXPRN__SCORE_FAC_Desc3__c</fullName>
        <label>SCORE FAC Desc3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EXPRN__Score_Factor1__c</fullName>
        <label>Score Factor1</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Score_Factor2__c</fullName>
        <label>Score Factor2</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Score_Factor3__c</fullName>
        <label>Score Factor3</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Segment_Code__c</fullName>
        <label>Segment Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <label>Business Score</label>
    <nameField>
        <label>Business Score Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business Score</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>